--- a/PrepareImageData.ipynb
+++ b/PrepareImageData.ipynb
@@ -19,7 +19,11 @@
     "image_folder = 'categories'\n",
     "\n",
     "images = os.listdir(image_path)\n",
-    "shutil.rmtree(image_folder)\n",
+    "try:\n",
+    "    shutil.rmtree(image_folder)\n",
+    "except:\n",
+    "    pass\n",
+    "\n",
     "for index, image in enumerate(images):\n",
     "    folder_name = image.split('.')[0]\n",
     "    new_folder_name = os.path.join(image_folder, folder_name)\n",
@@ -27,6 +31,13 @@
     "    shutil.copyfile(os.path.join(image_path, image), os.path.join(new_folder_name, image))\n",
     "print('Done!')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -45,7 +56,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5rc1"
   }
  },
  "nbformat": 4,
