--- a/PrepareImageData.ipynb
+++ b/PrepareImageData.ipynb
@@ -11,7 +11,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image: 0\n",
+      "Image: 10000\n",
+      "Image: 20000\n",
+      "Image: 30000\n",
+      "Image: 40000\n",
+      "Image: 50000\n",
+      "Image: 60000\n",
+      "Image: 70000\n",
+      "Image: 80000\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import shutil\n",
@@ -25,6 +41,8 @@
     "    pass\n",
     "\n",
     "for index, image in enumerate(images):\n",
+    "    if index % 10000 == 0:\n",
+    "        print('Image: %d' % index)\n",
     "    folder_name = image.split('.')[0]\n",
     "    new_folder_name = os.path.join(image_folder, folder_name)\n",
     "    os.makedirs(new_folder_name)\n",
@@ -56,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5rc1"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
