--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -22,8 +14,9 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from keras.layers import Input, Dense, Reshape, Flatten, Dropout\n",
-    "from keras.layers import BatchNormalization, Activation, ZeroPadding2D\n",
+    "from keras.layers import Input, Dense, Reshape, Flatten, Dropout, BatchNormalization\n",
+    "from keras.layers import Activation, ZeroPadding2D, Add, Concatenate\n",
+    "\n",
     "from keras.layers.advanced_activations import LeakyReLU\n",
     "from keras.layers.convolutional import UpSampling2D, Conv2D\n",
     "from keras.models import Sequential, Model\n",
@@ -115,13 +108,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 202599 images belonging to 202599 classes.\n"
+     ]
+    }
+   ],
    "source": [
     "target_size = (128, 128)\n",
     "input_shape = (target_size[0], target_size[1], 3)\n",
-    "batch_size = 512\n",
+    "batch_size = 16\n",
     "\n",
     "data_generator = keras.preprocessing.image.ImageDataGenerator(rescale = 1/255)\n",
     "\n",
@@ -215,42 +216,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "model_13 (Model)             (None, 4, 4, 3)           5088      \n",
+      "_________________________________________________________________\n",
+      "model_14 (Model)             (None, 8, 8, 3)           96        \n",
+      "=================================================================\n",
+      "Total params: 5,184\n",
+      "Trainable params: 5,178\n",
+      "Non-trainable params: 6\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "m1 = generator_input_model(100,5)\n",
+    "m1.output_shape[1:]\n",
+    "\n",
+    "m2 = generator_conv_block(m1.output_shape[1:])\n",
+    "\n",
+    "total_model = Sequential()\n",
+    "total_model.add(m1)\n",
+    "total_model.add(m2)\n",
+    "total_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_generator():\n",
+    "dc = discriminator_classifier(5)\n",
+    "d1 = discriminator_conv_block((8,8,3))\n",
+    "d2 = discriminator_conv_block((16,16,3))\n",
+    "d3 = discriminator_conv_block((32,32,3))\n",
     "\n",
-    "    model = Sequential()\n",
+    "d_list = [d1, d2, d3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Invalid input_shape argument [(None, 2, 2, 3), (None, 5)]: model has 1 tensor inputs.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-58-e20b0c666a2d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mtotal_d\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0min_image\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0min_features\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0md1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtotal_cnn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0min_image\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0min_features\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/anaconda3/envs/dml/lib/python3.6/site-packages/keras/engine/base_layer.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, inputs, **kwargs)\u001b[0m\n\u001b[1;32m    472\u001b[0m             if all([s is not None\n\u001b[1;32m    473\u001b[0m                     for s in to_list(input_shape)]):\n\u001b[0;32m--> 474\u001b[0;31m                 \u001b[0moutput_shape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute_output_shape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_shape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    475\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    476\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_shape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/envs/dml/lib/python3.6/site-packages/keras/engine/network.py\u001b[0m in \u001b[0;36mcompute_output_shape\u001b[0;34m(self, input_shape)\u001b[0m\n\u001b[1;32m    597\u001b[0m             raise ValueError('Invalid input_shape argument ' +\n\u001b[1;32m    598\u001b[0m                              \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_shape\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m': model has '\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 599\u001b[0;31m                              str(len(self._input_layers)) + ' tensor inputs.')\n\u001b[0m\u001b[1;32m    600\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    601\u001b[0m         \u001b[0mcache_key\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m', '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0minput_shapes\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Invalid input_shape argument [(None, 2, 2, 3), (None, 5)]: model has 1 tensor inputs."
+     ]
+    }
+   ],
+   "source": [
+    "in_features = Input(shape=[5])\n",
+    "in_image = Input(shape=[16,16,3])\n",
     "\n",
-    "    model.add(Dense(128 * 8 * 8, activation=\"relu\", input_dim=latent_dim))\n",
-    "    model.add(Reshape((8, 8, 128)))\n",
-    "    model.add(UpSampling2D())\n",
+    "total_cnn = Sequential()\n",
+    "for i in range(len(d_list)-1,-1,-1):\n",
+    "    total_cnn.add(d_list[i])\n",
     "    \n",
-    "    model.add(Conv2D(128, kernel_size=3, padding=\"same\"))\n",
-    "    model.add(BatchNormalization(momentum=0.8))\n",
-    "    model.add(Activation(\"relu\"))\n",
-    "    model.add(UpSampling2D())\n",
-    "    \n",
-    "    model.add(Conv2D(64, kernel_size=3, padding=\"same\"))\n",
-    "    model.add(BatchNormalization(momentum=0.8))\n",
-    "    model.add(Activation(\"relu\"))\n",
-    "    model.add(UpSampling2D())\n",
-    "    \n",
-    "    model.add(Conv2D(32, kernel_size=3, padding=\"same\"))\n",
-    "    model.add(BatchNormalization(momentum=0.8))\n",
-    "    model.add(Activation(\"relu\"))\n",
-    "    model.add(UpSampling2D())\n",
-    "    \n",
-    "    model.add(Conv2D(3, kernel_size=3, padding=\"same\"))\n",
-    "    model.add(Activation(\"sigmoid\"))\n",
     "\n",
-    "    #model.summary()\n",
+    "total_d = Model([in_image, in_features], d1([total_cnn(in_image), in_features]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "input_43 (InputLayer)           (None, 16, 16, 3)    0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "sequential_3 (Sequential)       (None, 4, 4, 3)      192         input_43[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "input_42 (InputLayer)           (None, 5)            0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "model_19 (Model)                (None, 1)            1431        sequential_3[1][0]               \n",
+      "                                                                 input_42[0][0]                   \n",
+      "==================================================================================================\n",
+      "Total params: 1,623\n",
+      "Trainable params: 1,611\n",
+      "Non-trainable params: 12\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_d.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generator_input_model(latent_dim, nbr_input_features):\n",
+    "    generator_input = Input(shape=[latent_dim + nbr_input_features])\n",
+    "    fc = Dense(4*4*3)(generator_input)\n",
+    "    fc = LeakyReLU(alpha=0.2)(fc)\n",
+    "    image = Reshape((4, 4, 3))(fc)\n",
+    "    return Model(generator_input, image)\n",
     "\n",
-    "    noise = Input(shape=(latent_dim,))\n",
-    "    img = model(noise)\n",
+    "def generator_conv_block(input_shape):\n",
+    "    image_input = Input(shape=input_shape)\n",
+    "    image = UpSampling2D()(image_input)\n",
+    "    image = Conv2D(3, kernel_size=3, padding=\"same\")(image)\n",
+    "    image = BatchNormalization()(image)\n",
+    "    image = LeakyReLU(alpha=0.2)(image)\n",
+    "    return Model(image_input, image)\n",
     "\n",
-    "    return Model(noise, img)\n",
+    "def discriminator_classifier(nbr_input_features):\n",
+    "    fc_size = (4*4*3 + nbr_input_features )// 2\n",
+    "    image_input = Input(shape=(4,4,3))\n",
+    "    image_flat = Flatten()(image_input)\n",
+    "    \n",
+    "    feature_input = Input(shape=[nbr_input_features])\n",
+    "    classifier_input = Concatenate()([image_flat, feature_input])\n",
+    "    \n",
+    "    hidden = Dense(fc_size)(classifier_input)\n",
+    "    hidden = LeakyReLU(alpha=0.2)(hidden)\n",
+    "    out = Dense(1, activation='sigmoid')(hidden)\n",
+    "    \n",
+    "    return Model([image_input, feature_input], out)\n",
+    "\n",
+    "def discriminator_conv_block(input_shape):\n",
+    "    image_input = Input(shape=input_shape)\n",
+    "    image = Conv2D(3, kernel_size=3, padding=\"same\", strides=2)(image_input)\n",
+    "    image = BatchNormalization()(image)\n",
+    "    image = LeakyReLU(alpha=0.2)(image)\n",
+    "    return Model(image_input, image)\n",
+    "    \n",
     "\n",
     "def build_discriminator():\n",
     "\n",
