--- a/Project.ipynb
+++ b/Project.ipynb
@@ -218,125 +218,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create Generator"
+    "### Generate models!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "model_1 (Model)              (None, 4, 4, 3)           5088      \n",
-      "_________________________________________________________________\n",
-      "model_2 (Model)              (None, 8, 8, 3)           96        \n",
-      "_________________________________________________________________\n",
-      "model_3 (Model)              (None, 16, 16, 3)         96        \n",
-      "=================================================================\n",
-      "Total params: 5,280\n",
-      "Trainable params: 5,268\n",
-      "Non-trainable params: 12\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "m1 = generator_input_model(100,5)\n",
-    "model_list = [m1]\n",
-    "m1.output_shape[1:]\n",
-    "\n",
-    "m2 = generator_conv_block(m1.output_shape[1:])\n",
-    "model_list.append(m2)\n",
-    "\n",
-    "# new_model \n",
-    "model = generator_conv_block(model_list[-1].output_shape[1:])\n",
-    "model_list.append(model)\n",
-    "\n",
-    "total_model = Sequential()\n",
-    "for m in model_list:\n",
-    "    total_model.add(m)\n",
-    "#total_model.add(m1)\n",
-    "#total_model.add(m2)\n",
-    "total_model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dc = discriminator_classifier(5)\n",
-    "d1 = discriminator_conv_block((8,8,3))\n",
-    "d2 = discriminator_conv_block((16,16,3))\n",
-    "d3 = discriminator_conv_block((32,32,3))\n",
+    "noise_size = 100\n",
+    "nbr_of_features = 5\n",
+    "in_features = Input(shape=[nbr_of_features])\n",
     "\n",
-    "d_list = [d1, d2, d3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "in_features = Input(shape=[5])\n",
-    "in_image = Input(shape=[16,16,3])\n",
-    "\n",
-    "total_cnn = Sequential()\n",
-    "for i in range(len(d_list)-1,-1,-1):\n",
-    "    total_cnn.add(d_list[i])\n",
-    "    \n",
-    "\n",
-    "total_d = Model([in_image, in_features], dc([total_cnn(in_image), in_features]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "__________________________________________________________________________________________________\n",
-      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
-      "==================================================================================================\n",
-      "input_12 (InputLayer)           (None, 16, 16, 3)    0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "sequential_3 (Sequential)       multiple             288         input_12[0][0]                   \n",
-      "__________________________________________________________________________________________________\n",
-      "input_11 (InputLayer)           (None, 5)            0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "model_4 (Model)                 (None, 1)            1431        sequential_3[1][0]               \n",
-      "                                                                 input_11[0][0]                   \n",
-      "==================================================================================================\n",
-      "Total params: 1,719\n",
-      "Trainable params: 1,701\n",
-      "Non-trainable params: 18\n",
-      "__________________________________________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "total_d.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def generator_input_model(latent_dim, nbr_input_features):\n",
     "    generator_input = Input(shape=[latent_dim + nbr_input_features])\n",
     "    fc = Dense(4*4*3)(generator_input)\n",
@@ -372,59 +266,7 @@
     "    image = BatchNormalization()(image)\n",
     "    image = LeakyReLU(alpha=0.2)(image)\n",
     "    return Model(image_input, image)\n",
-    "    \n",
     "\n",
-    "def build_discriminator():\n",
-    "\n",
-    "    model = Sequential()\n",
-    "\n",
-    "    model.add(Conv2D(32, kernel_size=5, strides=2, input_shape=input_shape, padding=\"same\"))\n",
-    "    model.add(LeakyReLU(alpha=0.2))\n",
-    "    \n",
-    "    model.add(Dropout(0.25))\n",
-    "    model.add(Conv2D(64, kernel_size=5, strides=2, padding=\"same\"))\n",
-    "    #model.add(ZeroPadding2D(padding=((0,1),(0,1))))\n",
-    "    model.add(BatchNormalization(momentum=0.8))\n",
-    "    model.add(LeakyReLU(alpha=0.2))\n",
-    "    \n",
-    "    model.add(Dropout(0.25))\n",
-    "    model.add(Conv2D(128, kernel_size=5, strides=2, padding=\"same\"))\n",
-    "    model.add(BatchNormalization(momentum=0.8))\n",
-    "    model.add(LeakyReLU(alpha=0.2))\n",
-    "    \n",
-    "    model.add(Dropout(0.25))\n",
-    "    model.add(Conv2D(256, kernel_size=5, strides=1, padding=\"same\"))\n",
-    "    model.add(BatchNormalization(momentum=0.8))\n",
-    "    model.add(LeakyReLU(alpha=0.2))\n",
-    "\n",
-    "    model.add(Dropout(0.25))\n",
-    "    model.add(Flatten())\n",
-    "    model.add(Dense(1, activation='sigmoid'))\n",
-    "\n",
-    "    #model.summary()\n",
-    "\n",
-    "    img = Input(shape=input_shape)\n",
-    "    validity = model(img)\n",
-    "\n",
-    "    return Model(img, validity)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Generate models!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "noise_size = 100\n",
-    "nbr_of_features = 5\n",
-    "in_features = Input(shape=[nbr_of_features])\n",
     "\n",
     "def next_generator_model(previous_model):\n",
     "    new_block = generator_conv_block(previous_model.output_shape[1:])\n",
@@ -440,7 +282,9 @@
     "    new_cnn_model = Sequential()\n",
     "    new_cnn_model.add(new_block)\n",
     "    new_cnn_model.add(previous_cnn_network)\n",
-    "    return new_cnn_model\n"
+    "    return new_cnn_model\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -459,13 +303,8 @@
     "\n",
     "# First generator step\n",
     "current_generator_model = generator_input_model(noise_size, nbr_of_features)\n",
-    "\n",
-    "\n",
     "# First Discriminator step, only classifier\n",
-    "#total_d = Model([in_image, in_features], d1([total_cnn(in_image), in_features]))\n",
-    "d_c = discriminator_classifier(nbr_of_features)\n",
-    "\n",
-    "#d_1 = Model([in_image, in_features], dc([in_image, in_features]))\n"
+    "d_c = discriminator_classifier(nbr_of_features)\n"
    ]
   },
   {
@@ -521,12 +360,10 @@
     "current_generator_model = next_generator_model(previous_generator_model)\n",
     "                                               \n",
     "in_image = Input(shape=current_generator_model.output_shape[1:])\n",
-    "                                               \n",
+    "           \n",
+    "# Add discriminator CNN block\n",
     "current_discriminator_cnn = discriminator_conv_block((8, 8, 3))\n",
     "discriminator = Model([in_image, in_features], d_c([current_discriminator_cnn(in_image), in_features]))\n",
-    "\n",
-    "#discriminator.summary()\n",
-    "#current_generator_model.summary()\n",
     "\n",
     "                                            "
    ]
@@ -544,19 +381,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "# Generator step    \n",
-    "previous_generator_model = current_generator_model\n",
+    "previous_generator_model = current_generator_model \n",
     "current_generator_model = next_generator_model(previous_generator_model)\n",
-    "#current_generator_model.summary()\n",
-    "previous_generator_model.trainable=False\n",
-    "#current_model.summary()\n",
-    "in_image = Input(shape=current_generator_model.output_shape[1:])\n",
-    "previous_discriminator_cnn = current_discriminator_cnn\n",
+    "\n",
+    "# Discriminator step\n",
+    "in_image = Input(shape=current_generator_model.output_shape[1:]) # Input size should be equal to generator output size\n",
+    "previous_discriminator_cnn = current_discriminator_cnn # Save old cnn\n",
     "current_discriminator_cnn = next_discriminator_cnn(previous_discriminator_cnn)\n",
+    "# Put the discriminator together\n",
     "discriminator = Model([in_image, in_features], d_c([current_discriminator_cnn(in_image), in_features]))\n"
    ]
   },
