--- a/Project.ipynb
+++ b/Project.ipynb
@@ -201,7 +201,8 @@
     "batch_size = 16\n",
     "#batches_per_epoch = train_generator.n // batch_size\n",
     "train_generator= None\n",
-    "data_generator = None"
+    "data_generator = None\n",
+    "optimizer = Adam(0.0002, 0.5)"
    ]
   },
   {
@@ -235,9 +236,9 @@
     "    noise_input = Input(shape=[noise_size])\n",
     "    generator_input = Concatenate()([noise_input, in_features])\n",
     "    #generator_input = Input(shape=[latent_dim + nbr_input_features])\n",
-    "    fc = Dense(4*4*3)(generator_input)\n",
-    "    #fc = Dense(4*4*3, activation='sigmoid')(generator_input)\n",
-    "    fc = LeakyReLU(alpha=0.2)(fc)\n",
+    "    #fc = Dense(4*4*3)(generator_input)\n",
+    "    fc = Dense(4*4*3, activation='sigmoid')(generator_input)\n",
+    "    #fc = LeakyReLU(alpha=0.2)(fc)\n",
     "    image = Reshape((4, 4, 3))(fc)\n",
     "    return Model([noise_input, in_features], image)\n",
     "\n",
@@ -246,8 +247,8 @@
     "    image = UpSampling2D()(image_input)\n",
     "    image = Conv2D(3, kernel_size=3, padding=\"same\")(image)\n",
     "    image = BatchNormalization()(image)\n",
-    "    #image = Activation('sigmoid')(image)\n",
-    "    image = LeakyReLU(alpha=0.2)(image)\n",
+    "    image = Activation('sigmoid')(image)\n",
+    "    #image = LeakyReLU(alpha=0.2)(image)\n",
     "    return Model(image_input, image)\n",
     "\n",
     "def create_discriminator_classifier(nbr_input_features):\n",
@@ -429,7 +430,7 @@
     }
    ],
    "source": [
-    "\n",
+    "step = 1\n",
     "# First generator step\n",
     "current_generator_model = generator_input_model(noise_size, nbr_of_features)\n",
     "# First Discriminator step, only classifier\n",
@@ -470,9 +471,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = Adam(0.0002, 0.5)\n",
-    "\n",
-    "\n",
     "discriminator_classifier.compile(loss='binary_crossentropy', \n",
     "                      optimizer=optimizer,\n",
     "                      metrics=['accuracy'])\n",
@@ -563,6 +561,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Save the models from step 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_generator_model.save('generator_model_step%d.h5' %step)\n",
+    "discriminator_classifier.save('discriminator_classifier_step%d.h5' %step)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Step 2"
    ]
   },
@@ -575,7 +590,7 @@
    "outputs": [],
    "source": [
     "# Second step generator\n",
-    "\n",
+    "step += 1\n",
     "previous_generator_model = current_generator_model\n",
     "previous_generator_model.trainable = False\n",
     "current_generator_model = next_generator_model(previous_generator_model)\n",
@@ -638,9 +653,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = Adam(0.0002, 0.5)\n",
-    "\n",
-    "\n",
     "discriminator.compile(loss='binary_crossentropy', \n",
     "                      optimizer=optimizer,\n",
     "                      metrics=['accuracy'])\n",
@@ -729,6 +741,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Fine tune all weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "discriminator.trainable = True\n",
+    "discriminator.compile(loss='binary_crossentropy', \n",
+    "                      optimizer=optimizer,\n",
+    "                      metrics=['accuracy'])\n",
+    "\n",
+    "# The generator takes noise as input and generates imgs\n",
+    "#noise_input = Input(shape=[noise_size])\n",
+    "current_generator_model.trainable = True\n",
+    "img = current_generator_model([noise_input, in_features])\n",
+    "\n",
+    "# For the combined model we will only train the generator\n",
+    "discriminator.trainable = False\n",
+    "\n",
+    "# The discriminator takes generated images as input and determines validity\n",
+    "valid = discriminator([img, in_features])\n",
+    "\n",
+    "# The combined model  (stacked generator and discriminator)\n",
+    "# Trains the generator to fool the discriminator\n",
+    "combined = Model([noise_input, in_features], valid)\n",
+    "combined.compile(loss='binary_crossentropy', optimizer=optimizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d_loss_hist, g_loss_hist = train_gan(discriminator, current_generator_model, combined, epochs=epochs, batches_per_epoch=3)\n",
+    "plot_history(d_loss_hist, g_loss_hist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_generator_model.save('generator_model_step%d.h5' %step)\n",
+    "discriminator_classifier.save('discriminator_classifier_step%d.h5' %step)\n",
+    "current_discriminator_cnn.save('current_discriminator_cnn_step%d.h5' %)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Step 3,...,6"
    ]
   },
@@ -738,7 +806,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generator step    \n",
+    "# Generator step  \n",
+    "current_generator_model.trainable = False\n",
     "previous_generator_model = current_generator_model \n",
     "current_generator_model = next_generator_model(previous_generator_model)\n",
     "\n",
@@ -773,9 +842,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = Adam(0.0002, 0.5)\n",
-    "\n",
-    "\n",
     "discriminator.compile(loss='binary_crossentropy', \n",
     "                      optimizer=optimizer,\n",
     "                      metrics=['accuracy'])\n",
@@ -872,7 +938,36 @@
     }
    ],
    "source": [
-    "current_generator_model.summary()"
+    "discriminator.trainable = True\n",
+    "discriminator.compile(loss='binary_crossentropy', \n",
+    "                      optimizer=optimizer,\n",
+    "                      metrics=['accuracy'])\n",
+    "\n",
+    "# The generator takes noise as input and generates imgs\n",
+    "#noise_input = Input(shape=[noise_size])\n",
+    "current_generator_model.trainable = True\n",
+    "img = current_generator_model([noise_input, in_features])\n",
+    "\n",
+    "# For the combined model we will only train the generator\n",
+    "discriminator.trainable = False\n",
+    "\n",
+    "# The discriminator takes generated images as input and determines validity\n",
+    "valid = discriminator([img, in_features])\n",
+    "\n",
+    "# The combined model  (stacked generator and discriminator)\n",
+    "# Trains the generator to fool the discriminator\n",
+    "combined = Model([noise_input, in_features], valid)\n",
+    "combined.compile(loss='binary_crossentropy', optimizer=optimizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d_loss_hist, g_loss_hist = train_gan(discriminator, current_generator_model, combined, epochs=epochs, batches_per_epoch=3)\n",
+    "plot_history(d_loss_hist, g_loss_hist)"
    ]
   }
  ],
@@ -892,7 +987,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5rc1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
