batches parameter update

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -202,7 +202,8 @@
     "#batches_per_epoch = train_generator.n // batch_size\n",
     "train_generator= None\n",
     "data_generator = None\n",
-    "optimizer = Adam(0.0002, 0.5)"
+    "optimizer = Adam(0.0002, 0.5)\n",
+    "batches_per_epoch = 3"
    ]
   },
   {
@@ -553,7 +554,7 @@
     }
    ],
    "source": [
-    "d_loss_hist, g_loss_hist = train_gan(discriminator_classifier, current_generator_model, combined, epochs=epochs, batches_per_epoch=3)\n",
+    "d_loss_hist, g_loss_hist = train_gan(discriminator_classifier, current_generator_model, combined, epochs=epochs, batches_per_epoch=batches_per_epoch)\n",
     "plot_history(d_loss_hist, g_loss_hist)"
    ]
   },
@@ -733,7 +734,7 @@
     }
    ],
    "source": [
-    "d_loss_hist, g_loss_hist = train_gan(discriminator, current_generator_model, combined, epochs=epochs, batches_per_epoch=3)\n",
+    "d_loss_hist, g_loss_hist = train_gan(discriminator, current_generator_model, combined, epochs=epochs, batches_per_epoch=batches_per_epoch)\n",
     "plot_history(d_loss_hist, g_loss_hist)"
    ]
   },
@@ -778,7 +779,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d_loss_hist, g_loss_hist = train_gan(discriminator, current_generator_model, combined, epochs=epochs, batches_per_epoch=3)\n",
+    "d_loss_hist, g_loss_hist = train_gan(discriminator, current_generator_model, combined, epochs=epochs, batches_per_epoch=batches_per_epoch)\n",
     "plot_history(d_loss_hist, g_loss_hist)"
    ]
   },
@@ -790,7 +791,7 @@
    "source": [
     "current_generator_model.save('generator_model_step%d.h5' %step)\n",
     "discriminator_classifier.save('discriminator_classifier_step%d.h5' %step)\n",
-    "current_discriminator_cnn.save('current_discriminator_cnn_step%d.h5' %)"
+    "current_discriminator_cnn.save('current_discriminator_cnn_step%d.h5' %step)"
    ]
   },
   {
@@ -806,6 +807,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "step += 1\n",
     "# Generator step  \n",
     "current_generator_model.trainable = False\n",
     "previous_generator_model = current_generator_model \n",
@@ -905,7 +907,7 @@
     }
    ],
    "source": [
-    "d_loss_hist, g_loss_hist = train_gan(discriminator, current_generator_model, combined, epochs=epochs, batches_per_epoch=3)\n",
+    "d_loss_hist, g_loss_hist = train_gan(discriminator, current_generator_model, combined, epochs=epochs, batches_per_epoch=batches_per_epoch)\n",
     "plot_history(d_loss_hist, g_loss_hist)"
    ]
   },
@@ -966,8 +968,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d_loss_hist, g_loss_hist = train_gan(discriminator, current_generator_model, combined, epochs=epochs, batches_per_epoch=3)\n",
+    "d_loss_hist, g_loss_hist = train_gan(discriminator, current_generator_model, combined, epochs=epochs, batches_per_epoch=batches_per_epoch)\n",
     "plot_history(d_loss_hist, g_loss_hist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_generator_model.save('generator_model_step%d.h5' %step)\n",
+    "discriminator_classifier.save('discriminator_classifier_step%d.h5' %step)\n",
+    "current_discriminator_cnn.save('current_discriminator_cnn_step%d.h5' %step)"
    ]
   }
  ],
