--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -117,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,20 +241,28 @@
     "\n",
     "def save_imgs(epoch, generator):\n",
     "    r, c = 5, 5\n",
-    "    noise = np.random.normal(0, 1, (r * c, noise_size))\n",
-    "    gen_imgs = generator.predict([noise, feature_matrix])\n",
-    "\n",
+    "    #noise = np.random.normal(0, 1, (r * c, noise_size))\n",
+    "    #gen_imgs = generator.predict([noise, feature_matrix])\n",
+    "    # 1: female, black hair\n",
+    "    # 2: female, blonde hair\n",
+    "    # 3: female, brown hair\n",
+    "    # 4: male, grey hair\n",
+    "    # 5: male, black hair\n",
+    "    features = np.array([[1, -1, -1, -1, -1], [-1, 1, -1, -1, -1],[-1, -1, 1, -1, -1],[-1, -1, -1, 1, 1], [1, -1, -1, -1, 1]]);\n",
     "    # Rescale images 0 - 1\n",
-    "    gen_imgs = 0.5 * gen_imgs + 0.5\n",
+    "    #gen_imgs = 0.5 * gen_imgs + 0.5\n",
     "\n",
     "    fig, axs = plt.subplots(r, c)\n",
     "    cnt = 0\n",
     "    for i in range(r):\n",
+    "        \n",
     "        for j in range(c):\n",
-    "            axs[i,j].imshow(gen_imgs[cnt, :,:,:])\n",
+    "            noise = np.random.normal(0,1, (1, noise_size))\n",
+    "            gen_img = generator.predict([noise, features[i].reshape(1,5)])\n",
+    "            axs[i,j].imshow(gen_img[0,:,:,:])\n",
     "            axs[i,j].axis('off')\n",
     "            cnt += 1\n",
-    "    fig.savefig(\"images/celebA_fine_tune_2_%d.png\" % epoch)\n",
+    "    fig.savefig(\"Images_wasserstein/final_no_wasserstein_%d.png\" % epoch)\n",
     "    plt.close()\n",
     "\n",
     "def train_gan(discriminator, generator, combined_model, epochs=10, batches_per_epoch=None):\n",
@@ -335,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -343,15 +359,24 @@
      "output_type": "stream",
      "text": [
       "/home/student/anaconda3/envs/dml_gpu/lib/python3.6/site-packages/keras/engine/saving.py:269: UserWarning: No training configuration found in save file: the model was *not* compiled. Compile it manually.\n",
-      "  warnings.warn('No training configuration found in save file: '\n",
-      "/home/student/anaconda3/envs/dml_gpu/lib/python3.6/site-packages/keras/engine/saving.py:304: UserWarning: Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n",
-      "  warnings.warn('Error in loading the saved optimizer '\n"
+      "  warnings.warn('No training configuration found in save file: '\n"
      ]
     }
    ],
    "source": [
     "generator = load_model('generator_epoch_50.h5')\n",
-    "discriminator = load_model('discriminator_epoch_50.h5')"
+    "discriminator = load_model('discriminator_epoch_50.h5')\n",
+    "\n",
+    "#save_imgs(-1, generator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_imgs(-1, generator)"
    ]
   },
   {
